fix layout align

--- a/public/app.less
+++ b/public/app.less
@@ -33,6 +33,7 @@ body {
 
    header {
       .panel();
+      background-color: #4b6c6f;
       position: absolute;
       top: @padding;
       left: @padding;
